tools/tests/errors/surf_exc_14.ki
# padding a String to a huge width is guarded (raises, not OOM)
discard "x".center(100000000000)
